[package]
name = "rayn"
version = "0.1.0"
license-file = "LICENSE.md"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2018"

[features]
default = ["minterpolate"]

[dependencies]
vek = "0.9"
image = "0.22"
rand = "0.7"
rayon = "1.2"
minterpolate = { version = "0.4", optional = true }
splines = { version = "2.0", optional = true }
# sdfu = { path = "../sdfu", features = ["vek"] }
sdfu = { version = "0.1", features = ["vek"] }
num_cpus = "1.10"
dynamic-arena = "0.1"
