[package]
name = "rayn"
version = "0.1.0"
license-file = "LICENSE.md"
authors = ["Gray Olson <gray@grayolson.com>"]
edition = "2018"

[features]
default = ["minterpolate"]

[profile.dev]
opt-level = 3

[profile.release]
debug = true

[dependencies]
vek = "0.9"
image = "0.22"
rand = { version = "0.7", features = ["small_rng"] }
rayon = "1.2"
minterpolate = { version = "0.4", optional = true }
splines = { version = "2.0", optional = true }
sdfu = { path = "../sdfu", features = ["ultraviolet"] }
num_cpus = "1.10"
generic-array = "0.13"
bumpalo = { version = "2.6", features = ["collections"] }
wide = "0.2"
ultraviolet = { path = "../ultraviolet" }
